k8s/mongo.yaml
apiVersion: apps/v1        
kind: Deployment
metadata:
  labels:          
    app: user-db
  name: user-db 
spec:         
  replicas: 1    
  selector: 
    matchLabels:
      app: user-db-pod
  template:
    metadata:
      labels:
        app: user-db-pod
    spec:
      containers:
      - name: mongodb
        volumeMounts:
          - mountPath: /var/lib/mongo
            name: mo-user
        image: mongo:4.2
        ports:
        - containerPort: 27017
      volumes:
      - name: mo-user
        persistentVolumeClaim:
          claimName: mo-user-pvc
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-db
  name: user-db-service
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: user-db-pod
  type: ClusterIP
