k8s/users.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user
  name: user
  namespace: default
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user
  name: user
  namespace: default
spec:
  selector:
    matchLabels:
      app: user
  replicas: 1
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - image: docker.io/cmwylie19/users-v1:latest
          name: user
          ports:
            - containerPort: 8080
              name: http
      restartPolicy: Always
